셔틀콕 홍보물 추가

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </nav>
 <body>
   <br />
+  <!-- START Container -->
   <div class="container-fluid">
 
     <div class="panel panel-default">
@@ -59,16 +60,38 @@
         </div>
       </div>
     </div>
-      <h1>여기는 바디입니다.</h1>
-      <p class="lead">
-        안녕하세요 우린 리드입니다.
-      </p>
-      <p>
-        이것은 일반 문단입니다.
-      </p>
 
 
+
+    <h1>여기는 바디입니다.</h1>
+    <p class="lead">
+      안녕하세요 우린 리드입니다.
+    </p>
+    <p>
+      이것은 일반 문단입니다.
+    </p>
   </div>
+  <!-- END Container -->
+
+    <div id="shuttlecock_info" class="text-center">
+
+      <img src="./public/img/shuttlecock.png" />
+      <h1>셔틀콕</h1>
+      <p class="lead">
+        셔틀버스를 이용하는 가장 똑똑한 방법
+      </p>
+    </div>
+
+    <div id="partnership" class="text-center">
+      <h1>Partnership</h1>
+      <p class="lead">
+        EXIT는 한양대학교 ERICA 창업팀에 속해있습니다.
+      </p>
+      <img src="./public/img/knowledge_factory.png" />
+      <img src="./public/img/hanyang_erica_logo.png" />
+    </div>
+
+
 
 
 </body>
