--- a/index.html
+++ b/index.html
@@ -10,16 +10,35 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="./public/bootstrap/css/bootstrap.css" />
   <script src="./public/bootstrap/js/bootstrap.js"></script>
+  <!-- XEicon -->
+  <link rel="stylesheet" href="http://cdn.jsdelivr.net/xeicon/2/xeicon.min.css">
+  <!-- Font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+
+  <!-- Moment JS -->
+  <script src="./public/moment.js"></script>
 
   <!-- Main Style CSS -->
   <link rel="stylesheet" href="./style.css" />
-  <!-- XEicon -->
-  <link rel="stylesheet" href="http://cdn.jsdelivr.net/xeicon/2/xeicon.min.css">
+  <!-- Main javscript -->
+  <script src="./main.js"></script>
+
 
 </head>
-<header class="navbar navbar-fixed-top">
-  <a class="navbar-brand" href="#"><img id="brand_logo" src="./public/img/main_exit_logo.png" /></a>
-      <div class="container">
+<header >
+  <div class="pull-left">
+    <a href="#"><img id="brand_logo" src="./public/img/main_exit_logo.png" /></a>
+  </div>
+
+  <div class="pull-right">
+    <li><a href="#"><i class="xi-github xi-2x"></i></a></li>
+    <li><a href="#"><i class="xi-facebook-official xi-2x"></i></a></li>
+    <li><a href="#"><i class="xi-gmail xi-2x"></i></a></li>
+  </div>
+  <div class="clearfix"></div>
+
+      <!-- <div class="container">
+
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -34,52 +53,92 @@
             <li><a href="#about">제휴</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+        </div>
+      </div> -->
 </header>
+
+
 <nav class="text-center">
-  <h1>이곳은 NAV</h1>
+  <h1>우리는 세상의 가치를 알아갑니다</h1>
 </nav>
+
+
+
 <body>
   <br />
   <!-- START Container -->
   <div class="container-fluid">
 
-    <div class="panel panel-default">
+    <div class="row">
 
-      <div class="panel-heading">
-        <i class="xi-github xi-x"></i>
-        Github History
-      </div>
 
-      <div class="panel-body">
-        <img src="https://avatars.githubusercontent.com/u/7167731?" width="30px" class="img-circle">
-        <span>1 days ago</span>
-        <div class="github github-text">
-            <i class="xi-branch xi-x"></i><span>nayunhwan created branch master at EXIT-kr/EXIT_Homepage_GuideLine_Design</span>
+      <div class="col-md-4">
+        <div class="panel panel-default">
+
+          <div class="panel-heading">
+            <i class="xi-paper-o xi-x"></i>
+            Notice
+          </div>
+
+          <div class="panel-body">
+            <img src="https://avatars.githubusercontent.com/u/7167731?" width="30px" class="img-circle">
+            <span>1 days ago</span>
+            <div class="github github-text">
+                <i class="xi-branch xi-x"></i><span>nayunhwan created branch master at EXIT-kr/EXIT_Homepage_GuideLine_Design</span>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="panel panel-default">
+
+          <div class="panel-heading">
+            <i class="xi-github xi-x"></i>
+            Github History
+          </div>
+
+          <div class="panel-body">
+            <img src="https://avatars.githubusercontent.com/u/7167731?" width="30px" class="img-circle">
+            <span>1 days ago</span>
+            <div class="github github-text">
+                <i class="xi-branch xi-x"></i><span>nayunhwan created branch master at EXIT-kr/EXIT_Homepage_GuideLine_Design</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="panel panel-default">
+
+          <div class="panel-heading">
+            <i class="xi-paper-o xi-x"></i>
+            Recruit
+          </div>
+
+          <div class="panel-body">
+            <img src="https://avatars.githubusercontent.com/u/7167731?" width="30px" class="img-circle">
+            <span>1 days ago</span>
+            <div class="github github-text">
+                <i class="xi-branch xi-x"></i><span>nayunhwan created branch master at EXIT-kr/EXIT_Homepage_GuideLine_Design</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
-
-
-    <h1>여기는 바디입니다.</h1>
-    <p class="lead">
-      안녕하세요 우린 리드입니다.
-    </p>
-    <p>
-      이것은 일반 문단입니다.
-    </p>
   </div>
   <!-- END Container -->
 
     <div id="shuttlecock_info" class="text-center">
 
-      <img src="./public/img/shuttlecock.png" />
+      <img id="example_img" src="./public/img/shuttlecock.png" />
       <h1>셔틀콕</h1>
       <p class="lead">
         셔틀버스를 이용하는 가장 똑똑한 방법
       </p>
+      <a href="#" class="btn btn-default">
+        <img id="btn_google_play" src="./public/img/google_play_logo.png" />
+      </a>
     </div>
 
     <div id="partnership" class="text-center">
@@ -92,7 +151,7 @@
     </div>
 
 
-
+    <br />
 
 </body>
 <footer>
@@ -100,9 +159,9 @@
   <li><a href="#"><i class="xi-github xi-x"></i></a></li>
   <li><a href="#"><i class="xi-facebook-official xi-x"></i></a></li>
   <li><a href="#"><i class="xi-gmail xi-x"></i></a></li>
-  <p>
+  <div>
     Powered by Github Pages<br />
     경기도 안산시 상록구 한양대학로 55 한양대학교 ERICA 창업보육센터
-  </p>
+  </div>
 </footer>
 </html>
