--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <link rel="stylesheet" href="http://cdn.jsdelivr.net/xeicon/2/xeicon.min.css">
   <!-- Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
-
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" media="all">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lora:400,400italic,500,700,700italic" media="all">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Adamina" media="all">
   <!-- Moment JS -->
   <script src="./public/moment.js"></script>
 
@@ -82,8 +84,8 @@
 
           <div class="panel-body">
             <img src="https://avatars.githubusercontent.com/u/7167731?" width="30px" class="img-circle">
-            <span>1 days ago</span>
-            <div class="github github-text">
+            <span id="github_timestamp">1 days ago</span>
+            <div id="github_msg" class="github github-text">
                 <i class="xi-branch xi-x"></i><span>nayunhwan created branch master at EXIT-kr/EXIT_Homepage_GuideLine_Design</span>
             </div>
           </div>
